added resume section design

--- a/index.html
+++ b/index.html
@@ -132,7 +132,9 @@
                     </div>
                 </div>
             </div>
-            <button id="btn" class="btn-primary" >Download CV</button>
+            <div class="download-container">
+                <button  class="btn-primary" >Download CV</button>
+            </div>
         </section>
     </main>
     <footer>
