--- a/index.html
+++ b/index.html
@@ -138,7 +138,33 @@
         </section>
     </main>
     <footer>
-
+        <div class="footer-column">
+            <h3 class="footer-title">Lets Connect</h3>
+            <p class="footer-description">Please fill out the form on this section to contact with me or call between <br> 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div class="social-links">
+                <a href="" class="3"><img src="./images/icons/facebook.png" alt=""></a>
+                <a href="" class="3"><img src="images/icons/twitter.png" alt=""></a>
+                <a href="" class="3"><img src="images/icons/insta.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+      <form >
+        <h3 class="footer-title">Let’s Message me</h3>
+        <label for="">
+            <input class="from-name" type="text" placeholder="Your name">
+        </label>
+        <br>
+        <label for="">
+            <input class="form-email" type="email" placeholder="Your eamil">
+        </label>
+        <br>
+        <label for="">
+            <textarea placeholder="Message" class="form-textarea" name="" id="" cols="30" rows="10"></textarea>
+        </label>
+        <br>
+        <button class="btn-primary">Submit</button>
+      </form>
+        </div>
     </footer>
 </body>
 </html>
