--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/portfolio.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header class="header">
@@ -24,8 +25,8 @@
             <h3 class="banner-greeting">Hi, I am</h3>
             <h1 class="banner-title">Md Sayedul Haque</h1>
             <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly <br>he. Morning because as to society behaved moments.</p>
-            <button class="btn-primary">Download CV</button>
-            <button class="btn-primary">Contact</button>
+            <button class="btn-primary"> <i class="fa-solid fa-download"></i> Download CV</button>
+            <button class="btn-primary"> <i class="fa-solid fa-phone"></i> Contact</button>
         </div>
             <img class="profile-pic" src="images/sayedul.png" alt="">
         </div>
@@ -133,7 +134,7 @@
                 </div>
             </div>
             <div class="download-container">
-                <button  class="btn-primary" >Download CV</button>
+                <button  class="btn-primary" > <i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
     </main>
